Broke out steps into a new spark-engine project, added a DataGridStep to create data at runtime in an RDD

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>spark-launcher</module>
         <module>spark-application</module>
+        <module>spark-engine</module>
     </modules>
 
     <dependencyManagement>
