--- a/spark-application/pom.xml
+++ b/spark-application/pom.xml
@@ -11,12 +11,15 @@
 
     <artifactId>spark-application</artifactId>
     <dependencies>
+
+        <!-- Developed Dependencies -->
         <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.10</artifactId>
-            <version>2.0.1</version>
-            <scope>provided</scope>
+            <groupId>com.github.ccaspanello</groupId>
+            <artifactId>spark-engine</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Other Dependencies -->
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
@@ -31,6 +34,14 @@
             <groupId>commons-vfs</groupId>
             <artifactId>commons-vfs</artifactId>
             <version>20050307052300</version>
+        </dependency>
+
+        <!-- Provided Dependencies -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>2.0.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
