--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ccaspanello</groupId>
-    <artifactId>reactive-spark</artifactId>
+    <artifactId>spark</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -15,9 +15,9 @@
     </properties>
 
     <modules>
-        <module>spark-launcher</module>
         <module>spark-application</module>
         <module>spark-engine</module>
+        <module>spark-runner</module>
     </modules>
 
     <dependencyManagement>
